# qa-demo-repository

./: .cz.toml  .flake8  .gitignore  .pre-commit-config.yaml  BUGS.md  Changelog.md  Dockerfile  LICENSE  README.md  changelog_template.j2  docker-compose.yml  index.html  pyproject.toml  pytest.ini  report.html  run_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  label_by_severity.yml
chrome/: index.html
chrome/api/: index.html
chrome/cart/: index.html
chrome/product_details/: index.html
chrome/shopping_modal/: index.html
chrome/ui/: index.html
chrome/usertests/: index.html
components/: add_to_cart_modal.py  consent_popup.py  modal_shopping.py
github/workflows/: ci.yml
helper_functions_for_tests/: cart_tests_helpers.py  login_tests_helpers.py
opera/: index.html
opera/api/: index.html
opera/cart/: index.html
opera/product_details/: index.html
opera/shopping_modal/: index.html
opera/ui/: index.html
opera/usertests/: index.html
pages/: cart.py  delete_account_page.py  login_page.py  main_page.py  product_details_page.py
src/qa_demo_repository/: cli.py
tests/: conftest.py  conftest_helpers.py
tests/api/: test_basic_api_login_tests.py  test_basic_api_tests.py  test_user_profile.py  test_user_profile_api.py
tests/ui/: test_cart.py  test_product_details.py  test_search_bar.py  test_shopping_modal.py  test_user_profile_ui.py
utils/: api_requests.py  basefunctions.py  expected_conditions.py  markers.py  payloads.py  request_builder.py
