[tool.poetry]
name = "qa-demo-repository"
version = "0.7.1"
description = "Automated UI/API demo testing setup..."
authors = ["Jacek Gwoździewicz <gwozdziewiczjacek90@gmail.com>"]

packages = [
    { include = "qa_demo_repository", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
selenium = "^4.31.0"
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pytest-xdist = "^3.6.0"
pytest-html = "^4.1.1"
pre-commit = "^4.2.0"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
faker = "^37.3.0"

[tool.poetry.scripts]
lints = "qa_demo_repository.cli:lints"

[tool.pytest.ini_options]
markers = [
    "ui: UI ",
    "api: API ",
    "usertests:  usertests "
]
addopts = "--color=yes --capture=tee-sys"
log_cli = true
log_cli_level = "INFO"

filterwarnings = "ignore:Unverified HTTPS request.*"
